--- a/src/api/projects.json
+++ b/src/api/projects.json
@@ -11,7 +11,7 @@
     "tec": ["Tailwind CSS", "Typescript", "Next.js", "Firebase", "Git"],
     "owner": {
       "name": "Rangers Very",
-      "image": "https://scontent.fpiu1-1.fna.fbcdn.net/v/t39.30808-6/299679091_767433357800135_1474816514437664493_n.png?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeGIa4Cu9cKZMZA70IEImODBqnXqf0cRAMyqdep_RxEAzAVIukF7p53AeCD1BEjf2GYyJfWlHH-WPJDpLfQfRu8w&_nc_ohc=-hr7XD8A0O0Q7kNvgESR5E_&_nc_ht=scontent.fpiu1-1.fna&oh=00_AYCcs1st7fSNCU3Hc1u9D8zximhDLR342K7745eSSqfPmw&oe=668D592A"
+      "image": "/very.jpeg"
     }
   },
   {
@@ -34,7 +34,7 @@
     ],
     "owner": {
       "name": "Rangers Very",
-      "image": "https://scontent.fpiu1-1.fna.fbcdn.net/v/t39.30808-6/299679091_767433357800135_1474816514437664493_n.png?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeGIa4Cu9cKZMZA70IEImODBqnXqf0cRAMyqdep_RxEAzAVIukF7p53AeCD1BEjf2GYyJfWlHH-WPJDpLfQfRu8w&_nc_ohc=-hr7XD8A0O0Q7kNvgESR5E_&_nc_ht=scontent.fpiu1-1.fna&oh=00_AYCcs1st7fSNCU3Hc1u9D8zximhDLR342K7745eSSqfPmw&oe=668D592A"
+      "image": "/very.jpeg"
     }
   },
   {
@@ -53,7 +53,7 @@
     ],
     "owner": {
       "name": "Rangers Very",
-      "image": "https://scontent.fpiu1-1.fna.fbcdn.net/v/t39.30808-6/299679091_767433357800135_1474816514437664493_n.png?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeGIa4Cu9cKZMZA70IEImODBqnXqf0cRAMyqdep_RxEAzAVIukF7p53AeCD1BEjf2GYyJfWlHH-WPJDpLfQfRu8w&_nc_ohc=-hr7XD8A0O0Q7kNvgESR5E_&_nc_ht=scontent.fpiu1-1.fna&oh=00_AYCcs1st7fSNCU3Hc1u9D8zximhDLR342K7745eSSqfPmw&oe=668D592A"
+      "image": "/very.jpeg"
     }
   },
   {
